--- a/SyntaxKit/Syntax Definitions/HTML.plist
+++ b/SyntaxKit/Syntax Definitions/HTML.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>Components</key>
@@ -12,13 +12,13 @@
 				<integer>1</integer>
 			</array>
 			<key>End</key>
-			<string>"</string>
+			<string>&quot;</string>
 			<key>EscapeChar</key>
 			<string></string>
 			<key>Name</key>
 			<string>Strings</string>
 			<key>Start</key>
-			<string>"</string>
+			<string>&quot;</string>
 			<key>Type</key>
 			<string>String</string>
 		</dict>
@@ -43,27 +43,27 @@
 		<dict>
 			<key>Color</key>
 			<array>
-				<real>0.29999999999999999</real>
-				<real>0.29999999999999999</real>
-				<real>0.29999999999999999</real>
+				<real>0.3</real>
+				<real>0.3</real>
+				<real>0.3</real>
 			</array>
 			<key>End</key>
-			<string>"</string>
+			<string>&quot;</string>
 			<key>EscapeChar</key>
 			<string></string>
 			<key>Name</key>
 			<string>Strings</string>
 			<key>Start</key>
-			<string>"</string>
+			<string>&quot;</string>
 			<key>Type</key>
 			<string>String</string>
 		</dict>
 		<dict>
 			<key>Color</key>
 			<array>
-				<real>0.20000000000000001</real>
+				<real>0.2</real>
 				<real>0.5</real>
-				<real>0.20000000000000001</real>
+				<real>0.2</real>
 			</array>
 			<key>Keywords</key>
 			<array>
@@ -96,12 +96,13 @@
 			<string>BlockComment</string>
 		</dict>
 	</array>
-	<key>FileNameSuffixes</key>
+	<key>PreferredUTIs</key>
 	<array>
-		<string>htm</string>
-		<string>html</string>
-		<string>phtm</string>
-		<string>phtml</string>
+		<string>public.html</string>
+	</array>
+	<key>CompatibleUTIs</key>
+	<array>
+		<string>public.xml</string>
 	</array>
 </dict>
 </plist>
