--- a/SyntaxKit/SyntaxKit-Info.plist
+++ b/SyntaxKit/SyntaxKit-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.architechies.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.architechies.frameworks.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.38.1</string>
+	<string>0.38.3</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2013 Architechies. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
